--- a/.project.json
+++ b/.project.json
@@ -42,11 +42,16 @@
       "templateId": "sap.ui.ui5-template-plugin.2masterdetail",
       "templateVersion": "1.38.3",
       "dateTimeStamp": "Wed, 21 Sep 2016 06:38:52 GMT"
+    },
+    {
+      "templateId": "com.sap.webide.annotationmodeller.CreateAnnotationTemplate",
+      "templateVersion": "1.0.0",
+      "dateTimeStamp": "Thu, 22 Sep 2016 06:43:02 GMT"
     }
   ],
   "mockpreview": {
-    "mockUri": "/sap/opu/odata/sap/Z_EPM_RKT_SRV",
-    "metadataFilePath": "",
+    "mockUri": "/sap/opu/odata/sap/Z_EPM_RKT_SRV/",
+    "metadataFilePath": "localService/metadata.xml",
     "loadJSONFiles": false,
     "loadCustomRequests": false,
     "mockRequestsFilePath": ""
